--- a/packages/mural-picker/src/components/mural-picker/styles.scss
+++ b/packages/mural-picker/src/components/mural-picker/styles.scss
@@ -257,7 +257,7 @@ $mrl-font-dir: '@muraldevkit/ds-foundation/assets/fonts';
             height: auto;
             align-self: flex-start;
             max-width: 60%;
-            margin-top: 10px;
+            margin-top: unset;
           }
 
           .card-action-area {
